// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AsyncSelect /> Should render provided data - disabled 1`] = `
<StateManager
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  isClearable={true}
  isDisabled={true}
  isLoading={false}
  isSearchable={true}
  onChange={[MockFunction]}
  onInputChange={[Function]}
  styles={
    Object {
      "clearIndicator": [Function],
      "control": [Function],
      "dropdownIndicator": [Function],
      "menu": [Function],
      "menuList": [Function],
      "singleValue": [Function],
      "valueContainer": [Function],
    }
  }
  value={
    Object {
      "label": "Ocean",
      "value": "ocean",
    }
  }
/>
`;

exports[`<AsyncSelect /> Should render provided data - required 1`] = `
<StateManager
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  isClearable={false}
  isDisabled={false}
  isLoading={false}
  isSearchable={true}
  onChange={[MockFunction]}
  onInputChange={[Function]}
  styles={
    Object {
      "clearIndicator": [Function],
      "control": [Function],
      "dropdownIndicator": [Function],
      "menu": [Function],
      "menuList": [Function],
      "singleValue": [Function],
      "valueContainer": [Function],
    }
  }
  value={
    Object {
      "label": "Ocean",
      "value": "ocean",
    }
  }
/>
`;

exports[`<AsyncSelect /> Should render provided data 1`] = `
<StateManager
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  isClearable={true}
  isDisabled={false}
  isLoading={false}
  isSearchable={true}
  onChange={[MockFunction]}
  onInputChange={[Function]}
  styles={
    Object {
      "clearIndicator": [Function],
      "control": [Function],
      "dropdownIndicator": [Function],
      "menu": [Function],
      "menuList": [Function],
      "singleValue": [Function],
      "valueContainer": [Function],
    }
  }
  value={
    Object {
      "label": "Ocean",
      "value": "ocean",
    }
  }
/>
`;
